# ggegui

./: Cargo.toml  readme.md  shell.nix
.github/: dependabot.yml
.github/workflows/: rust.yml
ci/: check.sh  fmt.sh
examples/: basic_project_template.rs  basic_template.rs  egui_demo.rs  scale_factor.rs  select_element.rs
src/: input.rs  lib.rs  painter.rs
