[package]
name = "ggegui"
version = "0.3.6"
edition = "2021"
authors = ["NemuiSen <NemuiSen@proton.me>"]
license = "MIT"
repository = "https://github.com/NemuiSen/ggez-egui"
keywords = ["ggez", "egui", "gui", "gamedev"]
description = "A simple implementation of egui for ggez"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
ggez = "0.9.0"

[dev-dependencies]
egui_demo_lib = "0.22"
